        - fixed more issues with sparse data structures and non-double numbers
          in Matlab interface (by T. Kelman) [r2191]
        - added missing final int for Ipopt return code Maximum_CpuTime_Exceeded
          in Java interface [r2216]
        - fixed bug when trying to warmstart Ipopt in Java interface [r2253]

2012-11-19 releases/3.10.3
        - minor fixes in MA86 interface (by Jonathan Hogg) [r2069, r2086]
        - fix in IpTripletToCSRConverter for CSR forms with
          extra entries (by Jonathan Hogg) [r2087]
        - workaround problems with MacOSX-Lion's blas library
          (by Frederic Hetch) [r2102, #181]
        - the C interface now catches also Ipopt exceptions thrown
          within the OptimizeTNLP call and returns Ipopt::Unrecoverable_Exception
          as status [r2094, #144]
        - fixed segmentation fault in adaptive barrier parameter update rule
          when using the mehrotra option on unconstrained problems [r2114, #114]
        - fixed segmentation fault in case no iterate is available in case of
          catastrophic failure in restoration phase [r2115]
        - fixed default for mumps_dep_tol to work with current Mumps versions [r2116]
        - fixed sign of dual values in AMPL solution [r2123, #183]
        - fixed issue with sparse gradients in Matlab interface
          (by T. Kelman) [r2133, #187]
        - sIPOPT (by H. Pirnay):
          - starting values in C++ version of parametric example now
            match AMPL version [r2098]
          - numerical values in parametric example now match publication [r2099]
          - added options n_sens_steps and sens_boundcheck as AMPL options [r2099]
          - any non-zero suffix value is now accepted for sens_init_constr [r2100]
          - fix typo in AMPL interface (by Weifeng Chen) [r2110]
          - fix bug when compiling without AMPL interface [r2113]
        - build system:
          - updated instruction on using nowadays HSL sources (by T. Kelman)